--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@
     font-style: normal;
 }
 
-/* Added mobile-first styles outside the media query */
 body {
     display: flex;
     flex-direction: column;
@@ -43,7 +42,7 @@ body {
     font-size: 15px;
     line-height: 1.5;
     font-family: "Poppins";
-    padding: 3rem 1rem 0px;
+    padding: 3rem 1rem 0;
 }
 
 .text{
@@ -57,40 +56,40 @@ body {
 .text-1{
     font-size: 1.5rem;
     color: var(--Grey-400);
-    font-weight: var( --fw2);
+    font-weight: var(--fw2);
 }
 
 .text-2{
     font-size: 1.5rem;
     color: var(--Grey-500);
-    font-weight: var( --fw6);
+    font-weight: var(--fw6);
 }
 
 .text-3{
     font-size: 0.9rem;
     color: var(--Grey-500);
-    font-weight: var( --fw4);
-    margin: 20px 0px 40px;
-    padding: 0px 20px;
+    font-weight: var(--fw4);
+    margin: 1.333rem 0 2.666rem;
+    padding: 0 1.333rem;
 }
 
 .cards{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 2rem;
 }
 
 .title{
     font-size: 1.2rem;
     color: var(--Grey-500);
-    font-weight: var( --fw6);
-    margin-bottom: 5px;
+    font-weight: var(--fw6);
+    margin-bottom: 0.333rem;
 }
 
 .subtitle{
     font-size: 0.8rem;
     color: var(--Grey-400);
-    font-weight: var( --fw4);
+    font-weight: var(--fw4);
     width: 90%;
 }
 
@@ -99,25 +98,26 @@ body {
     text-align: end;
 }
 .icon img{
-    margin: 30px 0px;
+    margin: 2rem 0;
 }
 
 .cards > div {
-    border-radius: 8px;
-    padding: 20px 30px;
-    box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
-    border: 4px solid black;
+    border-radius: 0.533rem;
+    padding: 1.333rem 2rem;
+    box-shadow: 0 0.4rem 0.4rem hsl(0deg 0% 0% / 0.3);
+    border: 0.267rem solid black;
     border-bottom: 0;
-    border-left:   0;
-    border-right:  0;
-  }
-  .cards .card-1 { border-top: 4px solid var(--Cyan); }
-  .cards .card-2 { border-top: 4px solid var(--Red); }
-  .cards .card-3 { border-top: 4px solid var(--Orange); }
-  .cards .card-4 { border-top: 4px solid var(--Blue); }
+    border-left: 0;
+    border-right: 0;
+}
+
+.cards .card-1 { border-top: 0.267rem solid var(--Cyan); }
+.cards .card-2 { border-top: 0.267rem solid var(--Red); }
+.cards .card-3 { border-top: 0.267rem solid var(--Orange); }
+.cards .card-4 { border-top: 0.267rem solid var(--Blue); }
 
 .attribution {
-    font-size: 11px;
+    font-size: 0.733rem;
     text-align: center;
     color: var(--Green-700);
     padding: 1rem 0;
@@ -127,56 +127,25 @@ body {
     color: #3e52a3;
 }
 
-/* Desktop overrides */
-@media (min-width: 725px) {
-
+@media (min-width: 1200px) {
     body {
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        height: auto;
+        padding: 3rem 1rem 0;
     }
     
-    .text-1{
-        font-size: 2rem;
-    }
-    
-    .text-2{
+    .text-1,
+    .text-2 {
         font-size: 2rem;
     }
     
     .text-3{
         font-size: 0.85rem;
-        width: 65%;
+        width: 45%;
     }
-    
-    .title{
-        font-size: 1.2rem;
-        color: var(--Grey-500);
-        font-weight: var( --fw6);
-        margin-bottom: 5px;
-    }
-    
-    .subtitle{
-        font-size: 0.7rem;
-        color: var(--Grey-400);
-        font-weight: var( --fw4);
-        width: 90%;
-    }
-    
-    .icon{
-        width: 100%;
-        text-align: end;
-    }
-    
-    .icon img{
-        margin: 30px 0px;
-    }
-    
+
     .cards{
         display: grid;
-        grid-template-columns: repeat(3, 340px);
-        column-gap: 30px;
+        grid-template-columns: repeat(3, 22.667rem);
+        column-gap: 2rem;
         row-gap: 0px;
         justify-content: center;
         align-content: center;
@@ -189,14 +158,14 @@ body {
     
     .card-2{
         position: relative;
-        top: 100px;
+        top: 110px;
         grid-column: 2;
         grid-row:    1;
     }
     
     .card-3{
         position: relative;
-        bottom: 100px;
+        bottom: 110px;
         grid-column: 2;
         grid-row:    3;
     }
@@ -205,6 +174,4 @@ body {
         grid-column: 3;
         grid-row:    2;
     }
-
 }
-
